--- a/Notebook/DO_EDA.ipynb
+++ b/Notebook/DO_EDA.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Length of sentences distribution with outlier included.\n",
+    "Run this Notebook after get EDA Done.\nLength of sentences distribution with outlier included.\n",
     "<img src=\"./data/eda/outlier.png\" alt=\"NaN\">"
    ]
   },
