Update EDA and Result Analysis.ipynb

--- a/Notebook/EDA and Result Analysis.ipynb
+++ b/Notebook/EDA and Result Analysis.ipynb
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -234,8 +234,8 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
+       "      <th>values</th>\n",
+       "      <th>phrases</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -344,7 +344,7 @@
        "</div>"
       ],
       "text/plain": [
-       "           0                            1\n",
+       "      values                      phrases\n",
        "0   0.937280         programming language\n",
        "1   0.929334         knowledge management\n",
        "2   0.914744                  data mining\n",
@@ -367,13 +367,14 @@
        "19  0.836949       information technology"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "r = pd.read_csv('../data/outputs/AutoPhrase.txt', sep=\"\\t\", header=None)\n",
+    "r.columns = ['values', 'phrases']\n",
     "r.head(20)"
    ]
   },
